# rusty_search

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-rust.yml
crates/rusty-search/: Cargo.toml
crates/rusty-search-algolia/: Cargo.toml
crates/rusty-search-algolia/src/: convert.rs  lib.rs  query_map.rs  schema_map.rs
crates/rusty-search-azure-search/: Cargo.toml
crates/rusty-search-azure-search/src/: convert.rs  lib.rs  query_map.rs  schema_map.rs
crates/rusty-search-core/: Cargo.toml
crates/rusty-search-core/src/: backend.rs  document.rs  error.rs  lib.rs  query.rs  result.rs  schema.rs
crates/rusty-search-elasticsearch/: Cargo.toml
crates/rusty-search-elasticsearch/src/: convert.rs  lib.rs  query_map.rs  schema_map.rs
crates/rusty-search-meilisearch/: Cargo.toml
crates/rusty-search-meilisearch/src/: convert.rs  lib.rs  query_map.rs  schema_map.rs
crates/rusty-search-memory/: Cargo.toml
crates/rusty-search-memory/src/: eval.rs  lib.rs  sort.rs
crates/rusty-search-opensearch/: Cargo.toml
crates/rusty-search-opensearch/src/: lib.rs
crates/rusty-search-solr/: Cargo.toml
crates/rusty-search-solr/src/: convert.rs  lib.rs  query_map.rs  schema_map.rs
crates/rusty-search-tantivy/: Cargo.toml
crates/rusty-search-tantivy/src/: convert.rs  lib.rs  query_map.rs  schema_map.rs
crates/rusty-search/examples/: pluggable_backends.rs
crates/rusty-search/src/: lib.rs
docs/adr/: 0001-pluggable-search-backend-trait.md  0002-elasticsearch-backend-design.md  0003-meilisearch-backend-design.md  0004-opensearch-backend-as-a-wrapper.md  0005-solr-backend-as-an-independent-implementation.md  0006-algolia-backend-design.md  0007-azure-ai-search-backend-design.md
