[workspace]
resolver = "2"
members = [
    "crates/rusty-search-core",
    "crates/rusty-search-memory",
    "crates/rusty-search-tantivy",
    "crates/rusty-search-elasticsearch",
    "crates/rusty-search-meilisearch",
    "crates/rusty-search-opensearch",
    "crates/rusty-search",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/baileyrd/rusty_search"
authors = ["rusty_search contributors"]

[workspace.dependencies]
rusty-search-core = { path = "crates/rusty-search-core", version = "0.1.0" }
rusty-search-memory = { path = "crates/rusty-search-memory", version = "0.1.0" }
rusty-search-tantivy = { path = "crates/rusty-search-tantivy", version = "0.1.0" }
rusty-search-elasticsearch = { path = "crates/rusty-search-elasticsearch", version = "0.1.0" }
rusty-search-meilisearch = { path = "crates/rusty-search-meilisearch", version = "0.1.0" }
rusty-search-opensearch = { path = "crates/rusty-search-opensearch", version = "0.1.0" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tantivy = "0.26"
