[package]
name = "rusty-search-core"
description = "Backend-agnostic async search interface: documents, schema, query DSL, and the pluggable SearchBackend trait"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true }
