[package]
name = "rusty-search-meilisearch"
description = "Meilisearch-backed SearchBackend implementation for rusty_search: a remote HTTP search engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rusty-search-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
meilisearch-sdk = "0.33"
tokio = { workspace = true, features = ["sync"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
