[package]
name = "rusty-search-opensearch"
description = "OpenSearch-backed SearchBackend implementation for rusty_search: a remote HTTP search cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rusty-search-core = { workspace = true }
rusty-search-elasticsearch = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
serde_json = { workspace = true }
