[package]
name = "rusty-search-tantivy"
description = "Tantivy-backed SearchBackend implementation for rusty_search: embedded full-text search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rusty-search-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
anyhow = "1"
time = { version = "0.3", features = ["parsing", "formatting"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
